# Dota2_DPPO_bots

./: .gitignore  .gitmodules  GameServer.py  LICENSE  README.md  build.sh  chief.py  main.py  model.py  mp_trainer.py  note  plot_loss.py  plot_ratio.py  plot_rewards.py  run_with_log.sh  simulator.py  start_web.sh  test.py  train.py  utils.py  visualizer.py  webserviceAdapter.py
cppSimulator/: .gitignore  CMakeLists.txt  __init__.py  build.sh  test.py
cppSimulator/include/: Config.h  Creep.cpp  Creep.h  Event.h  Hero.h  Sprite.h  Tower.h  log.h  simulator.h  simulatorImp.h
cppSimulator/src/: Config.cpp  Creep.cpp  Event.cpp  Hero.cpp  Sprite.cpp  Tower.cpp  log.cpp  simulator.cpp  simulatorImp.cpp
cppSimulator/test/: test_main.cpp
log/: .gitignore
simulator/: Config.py  Creep.py  Event.py  Hero.py  Sprite.py  Tower.py  simulator.py  visualizer.py
simulator/Events/: AttackEvent.py  __init__.py
webservice/: run.py
webservice/app/: views.py
webservice/app/templates/: index.html
